Add CSTests project
